<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2A2A49"
    tools:context=".ModeSelect">

    <TextView
        android:id="@+id/ModeSelectTitle"
        android:layout_width="363dp"
        android:layout_height="88dp"
        android:background="#AC9132"
        android:fontFamily="@font/inter"
        android:text="@string/mode_select"
        android:textAlignment="center"
        android:textColor="#25115F"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.062" />

    <Button
        android:id="@+id/button3"
        android:layout_width="300dp"
        android:layout_height="73dp"
        android:layout_marginBottom="12dp"
        android:background="#777EBC"
        android:backgroundTint="#FFFFFF"
        android:text="@string/_10"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ModeSelectTitle"
        app:layout_constraintVertical_bias="0.636" />

    <Button
        android:id="@+id/button4"
        android:layout_width="300dp"
        android:layout_height="73dp"
        android:layout_marginBottom="12dp"
        android:background="#777EBC"
        android:text="@string/_20"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="300dp"
        android:layout_height="73dp"
        android:layout_marginBottom="12dp"
        android:background="#777EBC"
        android:text="@string/_30"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="300dp"
        android:layout_height="73dp"
        android:layout_marginBottom="12dp"
        android:background="#777EBC"
        android:text="@string/_40"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="300dp"
        android:layout_height="73dp"
        android:layout_marginBottom="12dp"
        android:background="#777EBC"
        android:text="@string/_50"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="300dp"
        android:layout_height="73dp"
        android:layout_marginBottom="72dp"
        android:background="#777EBC"
        android:text="@string/_100"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="192dp"
        android:layout_marginBottom="16dp"
        android:text="@string/returnButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/okButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>