<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    tools:context=".LeaderboardSelect">

    <Button
        android:id="@+id/button10Leaderboard"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:backgroundTint="@color/buttonBackground"
        android:minWidth="154.21dp"
        android:minHeight="55.45dp"
        android:text="@string/_10"
        android:textAllCaps="false"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/specificLeaderTitleBackground" />

    <Button
        android:id="@+id/button20Leaderboard"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/buttonBackground"
        android:minWidth="154.21dp"
        android:minHeight="55.45dp"
        android:text="@string/_20"
        android:textAllCaps="false"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button10Leaderboard" />

    <Button
        android:id="@+id/button30Leaderboard"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/buttonBackground"
        android:minWidth="154.21dp"
        android:minHeight="55.45dp"
        android:text="@string/_30"
        android:textAllCaps="false"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button20Leaderboard" />

    <Button
        android:id="@+id/button40Leaderboard"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/buttonBackground"
        android:minWidth="154.21dp"
        android:minHeight="55.45dp"
        android:text="@string/_40"
        android:textAllCaps="false"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button30Leaderboard" />

    <Button
        android:id="@+id/button50Leaderboard"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/buttonBackground"
        android:minWidth="154.21dp"
        android:minHeight="55.45dp"
        android:text="@string/_50"
        android:textAllCaps="false"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button40Leaderboard" />

    <Button
        android:id="@+id/button100Leaderboard"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/buttonBackground"
        android:minWidth="154.21dp"
        android:minHeight="55.45dp"
        android:text="@string/_100"
        android:textAllCaps="false"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button50Leaderboard" />

    <Button
        android:id="@+id/nextLeaderboardSelectButton"
        android:layout_width="90dp"
        android:layout_height="57dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/buttonBackground"
        android:minWidth="154.21dp"
        android:minHeight="55.45dp"
        android:text="@string/okButtonText"
        android:textAllCaps="false"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button100Leaderboard"
        app:layout_constraintVertical_bias="0.525"
        tools:ignore="UnknownIdInLayout" />

    <View
        android:id="@+id/specificLeaderTitleBackground"
        android:layout_width="250dp"
        android:layout_height="84dp"
        android:layout_marginTop="76dp"
        android:background="@color/titleBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/SpecificLeaderBoardSelectTitle"
        android:layout_width="247dp"
        android:layout_height="82dp"
        android:text="@string/leaderboard_select"
        android:textAlignment="center"
        android:textColor="@color/titleTextBackground"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/specificLeaderTitleBackground"
        app:layout_constraintEnd_toEndOf="@+id/specificLeaderTitleBackground"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/specificLeaderTitleBackground"
        app:layout_constraintTop_toTopOf="@+id/specificLeaderTitleBackground"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/returnButtonLeaderboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/buttonBackground"
        android:contentDescription="Return Home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@android:drawable/ic_menu_revert" />

</androidx.constraintlayout.widget.ConstraintLayout>